// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TasksList When there are tasks renders correctly 1`] = `
Array [
  <Header
    color="paper"
    onButtonClick={[Function]}
    type="back"
  >
    <AvatarHeader />
    <Tabs
      centered={true}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </Header>,
  <main
    className="MuiBox-root MuiBox-root-2"
    data-testid="task-list-page"
  >
    <TabPanel
      index={0}
      value={0}
    >
      <TaskTabsContent
        loading={true}
        onChange={[Function]}
        tabIndex={0}
      />
    </TabPanel>
    <TabPanel
      index={1}
      value={0}
    >
      <TaskTabsContent
        loading={true}
        onChange={[Function]}
        tabIndex={0}
      />
    </TabPanel>
    <PlusButton
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "Link",
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      title="Add new task"
      to={
        Object {
          "pathname": "/buddy/newbies/1234/add-task",
          "state": Object {
            "tabIndex": 0,
          },
        }
      }
    />
  </main>,
]
`;

exports[`Component - TasksList When there are tasks renders correctly 2`] = `
Array [
  <Header
    color="paper"
    onButtonClick={[Function]}
    type="back"
  >
    <AvatarHeader />
    <Tabs
      centered={true}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </Header>,
  <main
    className="MuiBox-root MuiBox-root-2"
    data-testid="task-list-page"
  >
    <TabPanel
      index={0}
      value={0}
    >
      <TaskTabsContent
        loading={false}
        onChange={[Function]}
        tabIndex={0}
        tasks={
          Array [
            Object {
              "description": "New task description",
              "id": "3",
              "status": "COMPLETED",
              "title": "New task title ",
            },
            Object {
              "description": "New task description 2",
              "id": "4",
              "status": "COMPLETED",
              "title": "New task title 2",
            },
          ]
        }
      />
    </TabPanel>
    <TabPanel
      index={1}
      value={0}
    >
      <TaskTabsContent
        loading={false}
        onChange={[Function]}
        tabIndex={0}
        tasks={
          Array [
            Object {
              "description": "New task description",
              "id": "1",
              "status": "UNCOMPLETED",
              "title": "New task title ",
            },
            Object {
              "description": "New task description 2",
              "id": "2",
              "status": "COMPLETED",
              "title": "New task title 2",
            },
          ]
        }
      />
    </TabPanel>
    <PlusButton
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "Link",
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      title="Add new task"
      to={
        Object {
          "pathname": "/buddy/newbies/1234/add-task",
          "state": Object {
            "tabIndex": 0,
          },
        }
      }
    />
  </main>,
]
`;

exports[`Component - TasksList when there are not tasks should render empty state 1`] = `
Array [
  <Header
    color="paper"
    onButtonClick={[Function]}
    type="back"
  >
    <AvatarHeader />
    <Tabs
      centered={true}
      indicatorColor="primary"
      onChange={[Function]}
      textColor="primary"
      value={0}
      variant="fullWidth"
    >
      <Tab
        label="Newbie Tasks"
      />
      <Tab
        label="My tasks"
      />
    </Tabs>
  </Header>,
  <main
    className="MuiBox-root MuiBox-root-3"
    data-testid="task-list-page"
  >
    <TabPanel
      index={0}
      value={0}
    >
      <TaskTabsContent
        loading={false}
        onChange={[Function]}
        tabIndex={0}
        tasks={Array []}
      />
    </TabPanel>
    <TabPanel
      index={1}
      value={0}
    >
      <TaskTabsContent
        loading={false}
        onChange={[Function]}
        tabIndex={0}
        tasks={Array []}
      />
    </TabPanel>
    <PlusButton
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "Link",
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      title="Add new task"
      to={
        Object {
          "pathname": "/buddy/newbies/1234/add-task",
          "state": Object {
            "tabIndex": 0,
          },
        }
      }
    />
  </main>,
]
`;
